# BudgetWise

./: BWForms.py  BWMenu.py  BWScenes.py  BudgetAccountClass.py  BudgetClass.py  Budgetwise.db  Budgetwise.py  Database.py  DatabaseBackup.py  FormManager.py  Popuptest.py  README.md  README.txt  Report on Database Schema Creation for Budgetwise Application PART 1.docx  Testopener.py  category.py  category2.py  database.py  driver.py  dummy data.txt  login.py  macDB_setup.py  transaction2.py  user.py  vendor.py  vendor2.py  windowsDB_setup.py  ~$port on Database Schema Creation for Budgetwise Application PART 1.docx
2nd attempt/: db_setup.py  installation.py
BudgetWise2/: README.md  colors.txt  pyproject.toml
BudgetWise2/BudgetWise2/: main.py  routing.py
BudgetWise2/BudgetWise2/src/backend/database_interation/: user_data.py
BudgetWise2/BudgetWise2/src/ui/pages_scenes/: accounts.py  create_budget.py  dashboard.py  history.py  login.py  reset_password.py  security_questions.py
Budgetwise/: practice.py  routing.py
Budgetwise-final/: main.py
Budgetwise0.1/: main.py  routing.py
Budgetwise0.1.1/: routing.py
Budgetwise0.1.2/: main.py  routing.py
budgetwise test combination/: BWForms.py  BWScenes.py  Budgetwise.py  Database.py  installation.py  login.py  transaction2.py  user.py  vendor2.py
budgetwise test combination-2_21_25/: BWAccounts.py  BWDash.py  BWForms.py  BWHistory.py  BWImports.py  BWScenes.py  BWTransactions.py  Budgetwise.py  DataManager.py  UiUpdater.py  installation.py  login.py  transaction2.py  user.py
(+97 files in other folders)
